# eidos-mas-d

./: .gitignore  .gitmodules  setup.py
DeTR/: DETR.pptx
MCP/: .gitignore  README.md  claude_desktop_config.json  pyproject.toml
MCP/data/pizza/: pizzas_dataset.csv
MCP/find_server/: find_server.py
MCP/pizza_ordering_server/: pizza_ordering_server.py
MCP/research_server/: chatbot.py  mcp_chatbot.py  search_papers.py  search_papers_mcp_client.py  search_papers_mcp_server.py  server_config.json
NeRF/: NeRF.ipynb  README.md  env.yml
SMPL_HybrIK_Quaternions/: README.md  SMPL_HybrIK_Quaternions.ipynb  hybrik_wrapper.py  requirements.txt
ViT/: image_classifier_from_scratch.ipynb
WhatTheKafka/: api.py  producer.py
Whisper/: Whisper1.ipynb  Whisper2.ipynb  jetcut.mov
experiments/.ipynb_checkpoints/: classify-checkpoint.py
former.egg-info/: PKG-INFO
runs/: events.out.tfevents.1660756446.mars.187931.0  events.out.tfevents.1660759352.mars.192577.0
transformer101/: transformer_101.ipynb
transformer101/former.egg-info/: SOURCES.txt
transformer101/runs/: events.out.tfevents.1660756182.mars.187804.0  events.out.tfevents.1660757515.mars.189098.0  events.out.tfevents.1660757527.mars.189111.0
